// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createCustomAdapter should work correctly with skipInit = false: skipInit: false 1`] = `
"connect
{
  \\"config\\": {
    \\"skipInit\\": false,
    \\"a\\": \\"a\\",
    \\"b\\": \\"b\\"
  },
  \\"disposed\\": false,
  \\"initialPromise\\": {},
  \\"connectPromise\\": {}
}
[
  {}
]
init
{
  \\"config\\": {
    \\"skipInit\\": false,
    \\"a\\": \\"a\\",
    \\"b\\": \\"b\\"
  },
  \\"disposed\\": false,
  \\"initialPromise\\": {},
  \\"connectPromise\\": {}
}
[]
loadEvents
{
  \\"config\\": {
    \\"skipInit\\": false,
    \\"a\\": \\"a\\",
    \\"b\\": \\"b\\"
  },
  \\"disposed\\": false,
  \\"initialPromise\\": {},
  \\"connectPromise\\": {}
}
[
  {
    \\"aggregateIds\\": [
      \\"id1\\"
    ]
  },
  null
]"
`;

exports[`createCustomAdapter should work correctly with skipInit = true: skipInit: true 1`] = `
"connect
{
  \\"config\\": {
    \\"skipInit\\": true,
    \\"a\\": \\"a\\",
    \\"b\\": \\"b\\"
  },
  \\"disposed\\": false,
  \\"initialPromise\\": {},
  \\"connectPromise\\": {}
}
[
  {}
]
init
{
  \\"config\\": {
    \\"skipInit\\": true,
    \\"a\\": \\"a\\",
    \\"b\\": \\"b\\"
  },
  \\"disposed\\": false,
  \\"initialPromise\\": {},
  \\"connectPromise\\": {}
}
[]
loadEvents
{
  \\"config\\": {
    \\"skipInit\\": true,
    \\"a\\": \\"a\\",
    \\"b\\": \\"b\\"
  },
  \\"disposed\\": false,
  \\"initialPromise\\": {},
  \\"connectPromise\\": {}
}
[
  {
    \\"aggregateIds\\": [
      \\"id1\\"
    ]
  },
  null
]"
`;
